--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ He has 1 life and high hit points. Please don't hit him. His mom would be mad an
 He doesn't know how to swim, fly, bike, or skate.
 He knows how to be an idiot.
 He prides himself in that and relishes it like a deluded maniac.
-He doesn't swear and is PG-13.
+He doesn't swear and is MPAA rated G.
 He doesn't make promises, but he keeps his word.
 How long am I going to have to write good things about him?
 "Did you just call me an idiot and deluded maniac?"
