--- a/index.html
+++ b/index.html
@@ -14,12 +14,27 @@ He has 1 life and high hit points. Please don't hit him. His mom would be mad an
 He doesn't know how to swim, fly, bike, or skate.
 He knows how to be an idiot.
 He prides himself in that and relishes it like a deluded maniac.
-He doesn't swear and is MPAA rated G.
-He doesn't make promises, but he keeps his word.
+He doesn't swear and is rated G by the MPAA (not fact-checked).
+He doesn't make promises, and is a tryhard at keeping his word.
 How long am I going to have to write good things about him?
 "Did you just call me an idiot and deluded maniac?"
-He's a brilliant genius and most realistic and normal person ever.
+He's a brilliant genius and the most realistic and normal person ever.
 Personally, I find it difficult to trust someone who can't count past 9 and tells me to trust them.
 "I did not have you write about me to be humilated."</p>
+<h3><u>Habits</u></h3>
+<ul>
+<li>- B eing reduced to tears when a dog barks at him.
+<li>- U rinating in the shower every 3600 seconds.
+<li>- S heltering abandoned frogs and lizards.
+<li>- Y elling praise and insults at himself in the mirror.
+</ul>
+<h3><u>Hobbies</u></h3>
+<ul>
+<li>- M aking YouTube videos (I need a camera)?
+<li>- U nveiling truths and surprises!
+<li>- S aying useless things...
+<li>- E = mc<sup>2</sup>
+</ul>
+<p><center>Last Updated: 12/15/2018</center></p>
 </body>
 </html>
