--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ He doesn't make promises, and is a tryhard at keeping his word.
 How long am I going to have to write good things about him?
 "Did you just call me an idiot and deluded maniac?"
 He's a brilliant genius and the most realistic and normal person ever.
-Personally, I find it difficult to believe someone who can't count past 9 and tells me to trust them.
+Personally, I find it difficult to believe someone who can't count past 9 and tells me to trust him.
 "I did not have you write about me to be humilated."</p>
 <h3><u>Habits</u></h3>
 <ul>
