--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 <h1>Arthur T."E".P.</h1>
 <img src=me.jpg>
 <h2><em>(Aspiring) Master <strike>Chef</strike> Web Developer</em></h2>
+<p>A Goal: Any job/internship at a tech company (Tesla, Google, Microsoft, Apple, Oracle, IBM, HP, etc.),
+CZI, or a professional monkey playground (SNL, Late Night, The Tonight Show).
+<br><strong><font color=cyan>Also seeking work with salary pay anywhere around San Diego zipcode 92115 that doesn't require experience because I'm poor AF.</font color></strong>
+<br><span data-cdt-id="2343110">--:--:--:--</span>
+<script src="https://w2.countingdownto.com/2343110.js"></script></p>
 <h3><u>About</u></h3>
 <p>A young man, who was a shut-in for 9 years. It has been written as 10, 11, and 12 before. "I counted this time! Trust me!!"
 He is attempting to make his debut and find work, sponsors, scholarships, and friends to help him on his quest.
@@ -23,18 +28,33 @@ Personally, I find it difficult to believe someone who can't count past 9 and te
 "I did not have you write about me to be humilated."</p>
 <h3><u>Habits</u></h3>
 <ul>
-<li>- B eing reduced to tears when a dog barks at him.
-<li>- U rinating in the shower every 3600 seconds.
-<li>- S heltering abandoned frogs and lizards.
-<li>- Y elling praise and insults at himself in the mirror.
+<li> B eing reduced to tears when a dog barks at him.
+<li> U rinating in the shower every 3600 seconds.
+<li> S heltering abandoned frogs and lizards.
+<li> Y elling praise and insults at himself in the mirror.
 </ul>
 <h3><u>Hobbies</u></h3>
 <ul>
-<li>- M aking YouTube videos (I need a camera)?
-<li>- U nveiling truths and surprises!
-<li>- S aying useless things...
-<li>- E = mc<sup>2</sup>
+<li> M aking YouTube videos (I need a camera)?
+<li> U nveiling truths and surprises!
+<li> S aying useless things...
+<li> E = mc<sup>2</sup>
 </ul>
+<h3><u>Current Projects</u></h3>
+<ol>
+<li> R oute 44 Skateboards website development; started 12/12/2018.
+<li> O n the road to enlisting in the USAF (committment contract mentally signed by yours very truly; taking the ASVAB on 12/20 and increasing my BMI to meet physical standards and maintaining it)
+if it's determined that I've accomplished nothing in 403 days. It's made me scoot my 455 and exercise. I genuinely care about doing something larger than myself to help keep the world positive. I prefer my civilian status though. That's why this reason works. Dad is fearful.
+<li> F reelance writing for a newspaper or magazine.
+<li> L earning Python (after HTML, CSS, and Javascript).
+</ol>
+<h3><u>Future Projects</u></h3>
+<ol>
+<li> W riting a book
+<li> H aving dinner, lunch, or brunch with a CEO or a date
+<li> A pp game development
+<li> T ackling a world problem [Final Boss] (e.g., global warming-renewable energy)
+</ol>
 <p><center>Last Updated: 12/15/2018</center></p>
 </body>
 </html>
