--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 CZI, or a professional monkey playground (SNL, Late Night, The Tonight Show).
 <br><strong><font color=cyan>Also seeking work with salary pay anywhere around San Diego zipcode 92115 that doesn't require experience because I'm poor AF.</font color></strong>
 <br><span data-cdt-id="2343110">--:--:--:--</span>
-<script src="https://w2.countingdownto.com/2343110.js"></script></p>
+<script src="https://w2.countingdownto.com/2343110.js"></script>UTC</p>
 <h3><u>About</u></h3>
 <p>A young man, who was a shut-in for 9 years. It has been written as 10, 11, and 12 before. "I counted this time! Trust me!!"
 He is attempting to make his debut and find work, sponsors, scholarships, and friends to help him on his quest.
