--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <h2><em>(Aspiring) Master <strike>Chef</strike> Web Developer</em></h2>
 <p>A Goal: Any job/internship at a tech company (Tesla, Google, Microsoft, Apple, Oracle, IBM, HP, etc.),
 CZI, or a professional monkey playground (SNL, Late Night, The Tonight Show).
-<br><strong><font color=cyan>Also seeking work with salary pay anywhere around San Diego zipcode 92115 that doesn't require experience because I'm poor AF.</font color></strong>
+<br><strong><font color=cyan>Also seeking work with minimum wage salary (or lower like a woman's, I'm perhaps kidding) anywhere near SD 92115 that doesn't require experience because I'm poor AF.</font color></strong>
 <br><span data-cdt-id="2343110">--:--:--:--</span>
 <script src="https://w2.countingdownto.com/2343110.js"></script> (UTC)</p>
 <h3><u>About</u></h3>
@@ -44,9 +44,9 @@ Personally, I find it difficult to believe someone who can't count past 9 and te
 <ol>
 <li> R oute 44 Skateboards website development; started 12/13/2018.
 <li> O n the road to enlisting in the USAF (committment contract mentally signed by yours very truly; taking the ASVAB on 12/20 and increasing my BMI to meet physical standards and maintaining it)
-if it's determined that I've accomplished nothing in approximately 400 days, timed above. It's made me scoot my 455 and exercise. I genuinely care about doing something larger than myself to help keep the world positive. I prefer my civilian status though. That's why this reason works. Dad is fearful.
+if it's determined that I've accomplished nothing in approximately 400 days. It's made me scoot my 455 and exercise. I genuinely care about doing something larger than myself to help keep the world positive. I prefer my civilian status though. That's why this reason works. Dad is fearful.
 <li> F reelance writing for a newspaper or magazine.
-<li> L earning Python (after HTML, CSS, and Javascript).
+<li> L earn HTML, CSS, and Javascript. Then Java and Python. Then everything there is to know about a PC, from its assembly to its programs. Then C# and C++. Then cybersecurity, hacking, and blockchain. Then algorithms, malware, and viruses. Then this. Then that. I'm beyond help.
 </ol>
 <h3><u>Future Projects</u></h3>
 <ol>
