--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <h2><em>(Aspiring) Master <strike>Chef</strike> Web Developer</em></h2>
 <p>A Goal: Any job/internship at a tech company (Tesla, Google, Microsoft, Apple, Oracle, IBM, HP, etc.),
 CZI, or a professional monkey playground (SNL, Late Night, The Tonight Show).
-<br><strong><font color=cyan>Also seeking work with minimum wage salary (or lower like a woman's, I'm perhaps kidding) anywhere near SD 92115 that doesn't require experience because I'm poor AF.</font color></strong>
+<br><strong><font color=cyan>Also seeking work with minimum wage salary (or lower like wage gap, I'm perhaps kidding) anywhere near SD 92115 that doesn't require experience because I'm poor AF.</font color></strong>
 <br><span data-cdt-id="2343110">--:--:--:--</span>
 <script src="https://w2.countingdownto.com/2343110.js"></script> (UTC)</p>
 <h3><u>About</u></h3>
