--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 <img src=me.jpg>
 <h2><em>(Aspiring) Master <strike>Chef</strike> Web Developer</em></h2>
 <p>A Goal: Any job/internship at a tech company (Tesla, Google, Microsoft, Apple, Oracle, IBM, HP, etc.),
-CZI, or a professional monkey playground (SNL, Late Night, The Tonight Show).
-<br><strong><font color=cyan>Also seeking work with minimum wage salary (or lower like wage gap, I'm perhaps kidding) anywhere near SD 92115 that doesn't require experience because I'm poor AF.</font color></strong>
+CZI, or a professional monkey playground (SNL, TBS, Late Night, Late Late Show, The Tonight Show, Ellen). Alternatively, a scholarship to be a college student at a university, especially Caltech, Stanford, UC Berkeley, UCLA, USC, UCSD; Harvard, Princeton, MIT, Vanderbilt, Yale, Brown, Pennsylvania, Columbia, Cornell, Dartmouth; overseas at Queen's at Kingston, Stockholm, Oxford, Cambridge, Zurich—or just none of them!
+<br>Another Goal: Acquire backing from Shark Tank, The Carlyle Group, The Thiel Foundation, or other people and organizations when my progress has reached that stage
+<br><strong><font color=cyan>Also seeking work with minimum wage salary anywhere near San Diego zipcode 92116 that doesn't require experience because I'm poor AF.</font color><font color=yellow> (F is for FUN)</font color></strong>
 <br><span data-cdt-id="2343110">--:--:--:--</span>
 <script src="https://w2.countingdownto.com/2343110.js"></script> (UTC)</p>
 <h3><u>About</u></h3>
@@ -35,7 +36,7 @@ Personally, I find it difficult to believe someone who can't count past 9 and te
 </ul>
 <h3><u>Hobbies</u></h3>
 <ul>
-<li> M aking YouTube videos (I need a camera)?
+<li> M aking YouTube videos?
 <li> U nveiling truths and surprises!
 <li> S aying useless things...
 <li> E = mc<sup>2</sup>
@@ -51,7 +52,7 @@ if it's determined that I've accomplished nothing in approximately 400 days. It'
 <h3><u>Future Projects</u></h3>
 <ol>
 <li> W riting a book
-<li> H aving dinner, lunch, or brunch with a CEO or a date
+<li> H aving lunch or brunch with a CEO
 <li> A pp game development
 <li> T ackling a world problem [Final Boss] (e.g., global warming-renewable energy)
 </ol>
