--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ CZI, or a professional monkey playground (SNL, TBS, Late Night, Late Late Show, 
 <script src="https://w2.countingdownto.com/2343110.js"></script> (UTC)</p>
 <h3><u>About</u></h3>
 <p>A young man, who was a shut-in for 9 years. It has been written as 10, 11, and 12 before. "I counted this time! Trust me!!"
-He is attempting to make his debut and find work, sponsors, scholarships, and friends to help him on his quest.
+He is attempting to make his debut and find work, sponsors, extraterrestrials, and friends to help him on his quest.
 He has 1 life and high hit points. Please don't hit him. His mom would be mad and sad.
 He doesn't know how to swim, fly, bike, or skate.
 He knows how to be an idiot.
