--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <img src=me.jpg>
 <h2><em>(Aspiring) Master <strike>Chef</strike> Web Developer</em></h2>
 <p>A Goal: Any job/internship at a tech company (Tesla, Google, Microsoft, Apple, Oracle, IBM, HP, etc.),
-CZI, or a professional monkey playground (SNL, TBS, Late Night, Late Late Show, The Tonight Show, Ellen). Alternatively, a scholarship to be a college student at a university, especially Caltech, Stanford, UC Berkeley, UCLA, USC, UCSD; Harvard, Princeton, MIT, Vanderbilt, Yale, Brown, Pennsylvania, Columbia, Cornell, Dartmouth; overseas at Queen's at Kingston, Stockholm, Oxford, Cambridge, Zurich—or just none of them!
+CZI, or a professional monkey playground (SNL, TBS, Late Night, Late Late Show, The Tonight Show, Ellen). Alternatively, a scholarship to be a college student at a university, Caltech especially, Stanford, UC Berkeley, UCLA, USC, UCSD; Harvard, Princeton, MIT, Vanderbilt, Yale, Brown, Pennsylvania, Columbia, Cornell, Dartmouth; overseas at Queen's at Kingston, Stockholm, Oxford, Cambridge, Zurich—or just none of them!
 <br>Another Goal: Acquire backing from Shark Tank, The Carlyle Group, The Thiel Foundation, or other people and organizations when my progress has reached that stage
 <br><strong><font color=cyan>Also seeking work with minimum wage salary anywhere near San Diego zipcode 92116 that doesn't require experience because I'm poor AF.</font color><font color=yellow> (F is for FUN)</font color></strong>
 <br><span data-cdt-id="2343110">--:--:--:--</span>
