--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ Personally, I find it difficult to believe someone who can't count past 9 and te
 <ol>
 <li> R oute 44 Skateboards website development; started 12/13/2018.
 <li> O n the road to enlisting in the USAF (committment contract mentally signed by yours very truly; taking the ASVAB on 12/20 and increasing my BMI to meet physical standards and maintaining it)
-if it's determined that I've accomplished nothing in approximately 400 days. It's made me scoot my 455 and exercise. I genuinely care about doing something larger than myself to help keep the world positive. I prefer my civilian status though. That's why this reason works. Dad is fearful.
+if it's determined that I've accomplished nothing in approximately 400 days. It's made me scoot my 455 and exercise. I genuinely care about doing something larger than myself to help keep the world positive. I prefer my civilian status though. That's why this reason works. Dad is a wuss.
 <li> F reelance writing for a newspaper or magazine.
 <li> L earn HTML, CSS, and Javascript. Then Java and Python. Then everything there is to know about a PC, from its assembly to its programs. Then C# and C++. Then cybersecurity, hacking, and blockchain. Then algorithms, malware, and viruses. Then this. Then that. I'm beyond help.
 </ol>
