--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 <h1>Arthur T."E".P.</h1>
 <img src=me.jpg>
 <h2><em>(Aspiring) Master <strike>Chef</strike> Web Developer</em></h2>
-<p><span data-cdt-id="2343110">--:--:--:--</span>
+<p>OUTDATED! 02/03 back to being a scholar at SDSU
+<span data-cdt-id="2343110">--:--:--:--</span>
 <script src="https://w2.countingdownto.com/2343110.js"></script> (UTC)</p>
 <h3><u>About</u></h3>
 <p>A young man, who was a shut-in for 9 years. It has been written as 10, 11, and 12 before. "I counted this time! Trust me!!"
@@ -20,8 +21,8 @@ He doesn't swear and is rated G by the MPAA (not fact-checked).
 He doesn't make promises, and is a tryhard at keeping his word.
 How long am I going to have to write good things about him?
 "Did you just call me an idiot and deluded maniac?"
-He's a brilliant genius and the most realistic and normal person ever.
-Personally, I find it difficult to believe someone who can't count past 9 and tells me to trust him.
+He's totally a brilliant genius and the most realistic and normal person ever.
+... Personally, I find it difficult to believe someone who can't count past 9 and tells me to trust him.
 "I did not have you write about me to be humilated."</p>
 <h3><u>Habits</u></h3>
 <ul>
@@ -41,7 +42,7 @@ Personally, I find it difficult to believe someone who can't count past 9 and te
 <ol>
 <li> R oute 44 Skateboards website development; started 12/13/2018.
 <li> O n the road to enlisting in the USAF (committment contract mentally signed by yours very truly; taking the ASVAB on 12/20 and increasing my BMI to meet physical standards and maintaining it)
-if it's determined that I've accomplished nothing in approximately 400 days. It's made me scoot my 455 and exercise. I genuinely care about doing something larger than myself to help keep the world positive. I prefer my civilian status though. That's why this reason works. Dad is a wuss.
+if it's determined that I've accomplished nothing in approximately 400 days. It's made me scoot my 455 and exercise. I genuinely care about doing something larger than myself to help keep the world positive. I prefer my civilian status though. That's why this reason works. Dad is against it.
 <li> F reelance writing for a newspaper or magazine.
 <li> L earn HTML, CSS, and Javascript. Then Java and Python. Then everything there is to know about a PC, from its assembly to its programs. Then C# and C++. Then cybersecurity, hacking, and blockchain. Then algorithms, malware, and viruses. Then this. Then that. I'm beyond help.
 </ol>
